syntax = "proto3";

package User;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
  rpc AddUser (AddUserRequest) returns (UserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (UserResponse) {}
}

message GetUserRequest {
  string user_id = 1;
}

message AddUserRequest {
  string name = 1;
  int32 age = 2;
}
// 
message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  int32 age = 3;
}

message DeleteUserRequest {
  string user_id = 1;
}

message UserResponse {
  string name = 1;
  int32 age = 2;
}
